PPC64: Wrong code generation after JDK-8183574

XMLWordPrintable

    • b11
    • ppc
    • Not verified

      The function Assembler::andi generates wrong code in case pow2minus1.
      log2_long needs to be used to generate a correct constant in the clrldi instruction.
      This was broken by JDK-8183574.

      E.g. test jdk/internal/math/FloatingDecimal/TestFDBigInteger.java is failing.

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: