8239363: PPC64: Wrong code generation after JDK-8183574

Reviewed-by: stuefe, stefank, lucy